--- a/Login.html
+++ b/Login.html
@@ -4,21 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | Flores Jiménez</title>
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="bg-light">
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-md-4">
-        <div class="card shadow-lg p-4">
-          <h3 class="text-center mb-4">Iniciar sesión 🌸</h3>
-          
+<body>
+
+  <div class="login-container d-flex justify-content-center align-items-center vh-100">
+    <div class="card login-card shadow-lg overflow-hidden">
+      <div class="row g-0">
+
+        <!-- Imagen (65%) -->
+        <div class="col-md-7 d-none d-md-block login-image-side">
+          <img src="src/assets/ICON/Login.jpg" alt="Logo" class="img-fluid h-100 w-100 object-fit-cover">
+        </div>
+
+        <!-- Formulario (35%) -->
+        <div class="col-md-5 p-5 d-flex flex-column justify-content-center bg-white">
+          <h3 class="text-center mb-4">INICIAR SESIÓN</h3>
+
           <form id="loginForm">
             <div class="mb-3">
               <label class="form-label">Correo electrónico</label>
               <input type="email" class="form-control" id="txtEmail" placeholder="Ejemplo@gmail.com" required>
             </div>
-            
+
             <div class="mb-3">
               <label class="form-label">Contraseña</label>
               <input type="password" class="form-control" id="idPassword" placeholder="*****" required>
@@ -26,7 +39,6 @@
 
             <button class="btn btn-primary w-100" type="submit">Iniciar sesión</button>
           </form>
-
         </div>
       </div>
     </div>
@@ -35,3 +47,4 @@
   <script src="src/js/login.js"></script>
 </body>
 </html>
+
