--- a/Login.html
+++ b/Login.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
         <div class="col-md-5 p-5 d-flex flex-column justify-content-center bg-white">
           <h3 class="text-center mb-4">INICIAR SESIÓN</h3>
 
-          <form id="loginForm">
+          <form id="loginForm" class="needs-validation" novalidate>
             <div class="mb-3">
               <label class="form-label">Correo electrónico</label>
               <input type="email" class="form-control" id="txtEmail" placeholder="Ejemplo@gmail.com" required>
