--- a/loginMod.html
+++ b/loginMod.html
@@ -5,11 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | Flores Jiménez</title>
 
-  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -17,16 +15,19 @@
     <div class="card login-card shadow-lg overflow-hidden">
       <div class="row g-0">
 
-        <!-- Imagen (65%) -->
         <div class="col-md-7 d-none d-md-block login-image-side">
-          <img src="src/assets/ICON/Login.jpg" alt="Logo" class="img-fluid h-100 w-100 object-fit-cover">
+          <img src="assets/icon/iconoLogin.jpeg" alt="Logo" class="img-fluid h-100 w-100 object-fit-cover">
         </div>
 
-        <!-- Formulario (35%) -->
         <div class="col-md-5 p-5 d-flex flex-column justify-content-center bg-white">
           <h3 class="text-center mb-4">INICIAR SESIÓN</h3>
 
-          <form id="loginForm" class="needs-validation" novalidate>
+          <form id="loginForm" novalidate>
+            
+            <div id="loginMessage" class="alert alert-danger d-none" role="alert">
+              Mensaje de error aquí
+            </div>
+
             <div class="mb-3">
               <label class="form-label">Correo electrónico</label>
               <input type="email" class="form-control" id="txtEmail" placeholder="Ejemplo@gmail.com" required>
@@ -44,7 +45,6 @@
     </div>
   </div>
 
-  <script src="src/js/login.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
-
