--- a/dashboard_admin.html
+++ b/dashboard_admin.html
@@ -50,7 +50,22 @@
           </div>
         </div>
       </div>
-      
+
+      <div class="col-lg-7 col-md-9">
+        <div class="card shadow-sm border-0">
+          <div class="card-body p-4 p-md-5">
+            <div class="d-flex mb-3">
+              <i class="bi bi-person-lines-fill text-info card-icon me-3"></i>
+              <div>
+                <h4 class="card-title fw-bold mb-1">Clientes</h4>
+                <p class="card-text text-muted mb-0">Administra los clientes registrados.</p>
+              </div>
+            </div>
+            <a href="PanelClientesAdmin.html" class="btn btn-info w-100 mt-3">Entrar</a>
+          </div>
+        </div>
+      </div>
+
       <div class="col-lg-7 col-md-9">
         <div class="card shadow-sm border-0">
           <div class="card-body p-4 p-md-5">
@@ -61,7 +76,7 @@
                 <p class="card-text text-muted mb-0">Consulta y gestiona las ventas.</p>
               </div>
             </div>
-            <a href="#" class="btn btn-success w-100 mt-3">Entrar</a>
+            <a href="PanelVentasAdmin.html" class="btn btn-success w-100 mt-3">Entrar</a>
           </div>
         </div>
       </div>
@@ -76,7 +91,7 @@
                 <p class="card-text text-muted mb-0">Agrega, edita o elimina productos.</p>
               </div>
             </div>
-            <a href="#" class="btn btn-warning w-100 mt-3">Entrar</a>
+            <a href="PanelInventario.html" class="btn btn-warning w-100 mt-3">Entrar</a>
           </div>
         </div>
       </div>
